kubernetes/apps/base/network-system/envoy-gateway/app/service-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-external-internal
spec:
  clusterIP: 10.96.0.186
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-external
  ports:
    - name: https
      port: 443
      targetPort: 10443
      protocol: TCP
