kubernetes/apps/base/network-system/envoy-gateway/app/gateways.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external-dns.kubernetes.io/target: &hostname "external.${CLUSTER_DOMAIN}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${CLUSTER_LB_ENVOY_EXT_GATEWAY_API}
  addresses:
    - type: IPAddress
      value: ${CLUSTER_LB_ENVOY_EXT_GATEWAY_API}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: owncloud-ai-le
    - name: minecraft-bedrock
      protocol: UDP
      port: 19131
      allowedRoutes:
        namespaces:
          from: All
    - name: minecraft-bedrock-broadcaster
      protocol: UDP
      port: 19133
      allowedRoutes:
        namespaces:
          from: All
    - name: minecraft-java
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
    - name: enemy-territory
      protocol: UDP
      port: 27960
      allowedRoutes:
        namespaces:
          from: All
    - name: cmangos-auth
      protocol: TCP
      port: 3724
      allowedRoutes:
        namespaces:
          from: All
    - name: cmangos-world
      protocol: TCP
      port: 8085
      allowedRoutes:
        namespaces:
          from: All
    - name: cmangos-world-ptr
      protocol: TCP
      port: 8086
      allowedRoutes:
        namespaces:
          from: All
    - name: azerothcore-auth
      protocol: TCP
      port: 3725
      allowedRoutes:
        namespaces:
          from: All
    - name: azerothcore-world
      protocol: TCP
      port: 3726
      allowedRoutes:
        namespaces:
          from: All
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  annotations:
    external-dns.kubernetes.io/target: &hostname "internal.${CLUSTER_DOMAIN}"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${CLUSTER_LB_ENVOY_INT_GATEWAY_API}
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-internal
  addresses:
    - type: IPAddress
      value: ${CLUSTER_LB_ENVOY_INT_GATEWAY_API}
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: owncloud-ai-le
