kubernetes/apps/base/network-system/envoy-gateway/app/policies.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-default
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  compressor:
    - type: Zstd
    - type: Brotli
    - type: Gzip
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  tcpKeepalive:
    probes: 3
    idleTime: 20m
    interval: 60s
  timeout:
    http:
      requestTimeout: "0s"
